* help-fns.el (help-fns--obsolete): Fix last change.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-30  Chong Yidong  <cyd@gnu.org>
+
+	* help-fns.el (help-fns--obsolete): Fix last change.
+
 2012-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* winner.el (winner-mode-map): Obey winner-dont-bind-my-keys here.
