--- a/etc/NEWS
+++ b/etc/NEWS
@@ -76,6 +76,7 @@ You can explicitly require a specific version by passing
 
 * Startup Changes in Emacs 24.3
 
++++
 ** Emacs no longer searches for `leim-list.el' files beneath the standard
 lisp/ directory.  There should not be any there anyway.  If you have
 been adding them there, put them somewhere else, eg site-lisp.
@@ -89,10 +90,12 @@ been adding them there, put them somewhere else, eg site-lisp.
 ** minibuffer-electric-default-mode can rewrite (default ...) to [...].
 Just set minibuffer-eldef-shorten-default to t before enabling the mode.
 
++++
 ** Most y-or-n prompts now allow you to scroll the selected window.
 Typing C-v or M-v at a y-or-n prompt scrolls forward or backward
 respectively, without exiting from the prompt.
 
+---
 ** In minibuffer filename prompts, `C-M-f' and `C-M-b' now move to the
 next and previous path separator, respectively.
 
@@ -107,12 +110,14 @@ invokes `set-buffer-file-coding-system'.
 
 ** Help changes
 
++++
 *** `C-h f' (describe-function) can now perform autoloading.
 When this command is called for an autoloaded function whose docstring
 contains a key substitution construct, that function's library is
 automatically loaded, so that the documentation can be shown
 correctly.  To disable this, set `help-enable-auto-load' to nil.
 
+---
 *** `C-h f' now reports previously-autoloaded functions as "autoloaded",
 even after their associated libraries have been loaded (and the
 autoloads have been redefined as functions).
@@ -136,11 +141,11 @@ treated as images.
 :background image spec property.
 
 ** Server and client changes
-
++++
 *** emacsclient now obeys string values for `initial-buffer-choice',
 if it is told to open a new frame without specifying any file to visit
 or expression to evaluate.
-
+---
 *** New option `server-auth-key' specifies a shared server key.
 
 ** In the Package Menu, newly-available packages are listed as "new",
@@ -155,6 +160,7 @@ On encountering a fatal error, Emacs now outputs a textual description
 of the fatal signal, and a short backtrace on platforms like glibc
 that support backtraces.
 
+---
 ** If your Emacs was built from a bzr checkout, the new variable
 `emacs-bzr-version' contains information about the bzr revision used.
 
@@ -185,13 +191,32 @@ The PCL-CVS commands are still available via the keyboard.
 * Editing Changes in Emacs 24.3
 
 ** Navigation command changes
-
++++
 *** New binding `M-g c' for `goto-char'.
-
++++
 *** New binding `M-g TAB' for `move-to-column'.
-
++++
 *** `M-g TAB' (`move-to-column') prompts for a column number if called
 interactively with no prefix arg.  Previously, it moved to column 1.
+
+** Search and Replace changes
++++
+*** Non-regexp Isearch now performs "lax" space matching.
+Each sequence of spaces in the supplied search string may match any
+sequence of one or more whitespace characters, as specified by the
+variable `search-whitespace-regexp'.  (This variable is also used by a
+similar existing feature for regexp Isearch).
++++
+*** New Isearch command `M-s SPC' toggles lax space matching.
+This applies to both ordinary and regexp Isearch.
++++
+*** New option `replace-lax-whitespace'.
+If non-nil, `query-replace' uses flexible whitespace matching too.
+The default is nil.
+
+*** Global `M-s _' starts a symbol (identifier) incremental search,
+and `M-s _' in Isearch toggles symbol search mode.
+`M-s c' in Isearch toggles search case-sensitivity.
 
 +++
 ** `C-x 8 RET' is now bound to `insert-char', which is now a command.
@@ -202,28 +227,10 @@ interactively with no prefix arg.  Previously, it moved to column 1.
 It used to be bound to `kill-this-buffer', but `z' is too easy to
 accidentally type.
 
++++
 ** New option `delete-trailing-lines' specifies whether
 M-x delete-trailing-whitespace should delete trailing lines at the end
 of the buffer.  It defaults to t.
-
-** Search and Replace changes
-
-*** Non-regexp Isearch now performs "lax" space matching.
-Each sequence of spaces in the supplied search string may match any
-sequence of one or more whitespace characters, as specified by the
-variable `search-whitespace-regexp'.  (This variable is also used by a
-similar existing feature for regexp Isearch).
-
-*** New Isearch command `M-s SPC' toggles lax space matching.
-This applies to both ordinary and regexp Isearch.
-
-*** New option `replace-lax-whitespace'.
-If non-nil, `query-replace' uses flexible whitespace matching too.
-The default is nil.
-
-*** Global `M-s _' starts a symbol (identifier) incremental search,
-and `M-s _' in Isearch toggles symbol search mode.
-`M-s c' in Isearch toggles search case-sensitivity.
 
 ** Register changes
 +++
@@ -233,8 +240,10 @@ and `M-s _' in Isearch toggles symbol search mode.
 the text to put between collected texts for use with M-x
 append-to-register and M-x prepend-to-register.
 
++++
 ** `C-u M-=' now counts lines/words/characters in the entire buffer.
 
++++
 ** New command `C-x r M-w' (copy-rectangle-as-kill).
 It copies the region-rectangle as the last rectangle kill.
 
@@ -246,17 +255,17 @@ just removing them, as done by `yank-excluded-properties'.
 * Changes in Specialized Modes and Packages in Emacs 24.3
 
 ** Apropos
-
+---
 *** The faces used by Apropos are now directly customizable.
 These faces are named `apropos-symbol', `apropos-keybinding', and so on;
 see the `apropos' Custom group for details.
-
-**** The old options whose values specified faces to use were removed
+---
+*** The old options whose values specified faces to use were removed
 (i.e. `apropos-symbol-face', `apropos-keybinding-face', etc.).
 
 ** Buffer Menu
 This package has been rewritten to use Tabulated List mode.
-
+---
 *** Option `Buffer-menu-buffer+size-width' is now obsolete.
 Use `Buffer-menu-name-width' and `Buffer-menu-size-width' instead.
 
@@ -580,22 +589,22 @@ enabled.
 
 
 ** Obsolete packages:
-
++++
 *** assoc.el
 In most cases, assoc+member+push+delq work just as well.
 And in any case it's just a terrible package: ugly semantics, terrible
 inefficiency, and not namespace-clean.
-
+---
 *** bruce.el
-
+---
 *** ledit.el
-
+---
 *** mailpost.el
-
++++
 *** mouse-sel.el
-
+---
 *** patcomp.el
-
++++
 *** cust-print.el
 
 
@@ -603,11 +612,13 @@ inefficiency, and not namespace-clean.
 
 * Incompatible Lisp Changes in Emacs 24.3
 
++++
 ** (random) by default now returns a different random sequence in
 every Emacs run.  Use (random S), where S is a string, to set the
 random seed to a value based on S, in order to get a repeatable
 sequence in later calls.
 
+---
 ** The function `x-select-font' can return a font spec, instead of a
 font name as a string.  Whether it returns a font spec or a font name
 depends on the graphical library.
@@ -628,6 +639,7 @@ and are now undefined.  For backwards compatibility, defun and
 defmacro currently return the name of the newly defined function/macro
 but this should not be relied upon.
 
+---
 ** `face-spec-set' no longer sets frame-specific attributes when the
 third argument is a frame (that usage was obsolete since Emacs 22.2).
 
@@ -772,23 +784,24 @@ in Emacs 24.1:
 **** `display-buffer-function'
 
 ** Time
-
+---
 *** `current-time-string' no longer requires that its argument's year
 must be in the range 1000..9999.  It now works with any year supported
 by the underlying C implementation.
-
+---
 *** `current-time' now returns extended-format time stamps
 (HIGH LOW USEC PSEC), where the new PSEC slot specifies picoseconds.
 PSEC is typically a multiple of 1000 on current machines.  Other
 functions that use this format, such as file-attributes and
 format-time-string, have been changed accordingly.  Old-format time
 stamps are still accepted.
-
+---
 *** The format of timers in timer-list and timer-idle-list is now
 [TRIGGERED-P HI-SECS LO-SECS USECS REPEAT-DELAY FUNCTION ARGS IDLE-DELAY PSECS].
 The PSECS slot is new, and uses picosecond resolution.  It can be
 accessed via the new timer--psecs accessor.
 
++++
 ** Floating point functions now always return special values like NaN,
 instead of signaling errors, if given invalid args, e.g. (log -1.0).
 Previously, they returned NaNs on some platforms but signaled errors
@@ -806,18 +819,22 @@ result in a warning describing the cycle.
 
 *** `autoloadp'
 *** `autoload-do-load'.
++++
 *** `buffer-narrowed-p' tests if the buffer is narrowed.
 *** `file-name-base' returns a file name sans directory and extension.
 *** `function-get' fetches a function property, following aliases.
++++
 *** `posnp' tests if an object is a `posn'.
 *** `set-temporary-overlay-map' sets up a temporary overlay map.
++++
 *** `system-users' returns the user names on the system.
++++
 *** `system-groups' returns the group names on the system.
 *** `tty-top-frame' returns the topmost frame of a text terminal.
 
 ** New macros `setq-local' and `defvar-local'.
 
-** New fringe bitmap exclamation-mark.
+** New fringe bitmap `exclamation-mark'.
 
 ** Face underlining can now use a wave.
 See the "Face Attributes" section of the Elisp manual.
