--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-30  Chong Yidong  <cyd@gnu.org>
+
+	* fns.c (Frandom): Doc fix.
+
 2012-09-30  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.c (Vwindow_combination_limit): New default value.
