--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,6 +1,10 @@
+2012-09-30  Juanma Barranquero  <lekktu@gmail.com>
+
+	* config.nt: Sync with autogen/config.in.
+
 2012-09-29  Juanma Barranquero  <lekktu@gmail.com>
 
-	* config.nt: Sync with autogen/config.in
+	* config.nt: Sync with autogen/config.in.
 	(HAVE_TIMER_SETTIME): New macro.
 
 2012-09-23  Eli Zaretskii  <eliz@gnu.org>
