--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-30  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/profiler.$(O)): Update dependencies.
+
 2012-09-30  Chong Yidong  <cyd@gnu.org>
 
 	* fns.c (Frandom): Doc fix.
