Support file name dialog on NS.
* etc/NEWS: Mention that the file dialog is used on NS.

* lisp/term/ns-win.el (x-file-dialog): New function.

* src/fileio.c (Fnext_read_file_uses_dialog_p): Add HAVE_NS.

* src/nsfns.m (ns_frame_parm_handlers): Add x_set_fullscreen.

* src/nsfns.m (Fns_read_file_name): Add argument DIR_ONLY_P.
Initialize panel name field if OSX >= 10.6.

* src/w32fns.c (Fx_file_dialog): Update comment.

* src/xfns.c (Fx_file_dialog): Update comment.

--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,6 +1,7 @@
 2012-09-30  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* NEWS: The NS port supports fullscreen.
+	Mention that the file dialog is used on NS.
 
 2012-09-17  Glenn Morris  <rgm@gnu.org>
 
