file-attributes has a new optional arg FOLLOW-SYMLINKS.
* doc/lispref/files.texi (File Attributes): Describe it.
(Magic File Names): Use it.
* etc/NEWS: Document the change.
* lisp/files.el (remote-file-name-inhibit-cache):
* lisp/time.el (display-time-file-nonempty-p): Use it.
* lisp/files.el (after-find-file): Don't chase links before calling
file-exists-p, as file-exists-p already does the right thing.
* src/dired.c (directory_files_internal, Ffile_attributes):
New arg follow_symlinks.  All uses changed.

--- a/doc/lispref/files.texi
+++ b/doc/lispref/files.texi
@@ -1187,7 +1187,7 @@ link to.
 @end example
 @end defun
 
-@defun file-attributes filename &optional id-format
+@defun file-attributes filename &optional id-format follow-symlinks
 @anchor{Definition of file-attributes}
 This function returns a list of attributes of file @var{filename}.  If
 the specified file cannot be opened, it returns @code{nil}.
@@ -1197,6 +1197,9 @@ valid values are @code{'string} and @code{'integer}.  The latter is
 the default, but we plan to change that, so you should specify a
 non-@code{nil} value for @var{id-format} if you use the returned
 @acronym{UID} or @acronym{GID}.
+The optional parameter @var{follow-symlinks} says whether to follow
+@var{filename} if it is a symbolic link; if @code{t}, symbolic links
+are followed and if @code{nil} they are not.
 
 The elements of the list, in order, are:
 
@@ -2961,8 +2964,7 @@ between consecutive checks.  For example:
   (let ((remote-file-name-inhibit-cache
          (- display-time-interval 5)))
     (and (file-exists-p file)
-         (< 0 (nth 7 (file-attributes
-                       (file-chase-links file)))))))
+         (< 0 (nth 7 (file-attributes file nil t))))))
 @end example
 @end defopt
 
