--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	file-attributes has a new optional arg FOLLOW-SYMLINKS.
+	* NEWS: Document the change.
+
 2012-09-30  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* NEWS: The NS port supports fullscreen.
