--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-30  Eli Zaretskii  <eliz@gnu.org>
+
+	* ntlib.c (gettimeofday): Copy from src/w32.c.  lib/gettime.c
+	needs this function.
+
 2012-09-26  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (obj): Add profiler.o.
