--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,5 +1,42 @@
 2012-09-30  Eli Zaretskii  <eliz@gnu.org>
 
+	* makefile.w32-in ($(TRES)): Use $(EMACS_MANIFEST).
+
+2012-09-30  Fabrice Popineau  <fabrice.popineau@supelec.fr>
+
+	* inc/sys/socket.h: Don't map Winsock error codes to standard ones
+	that are already defined.
+
+	* inc/ms-w32.h (EMACS_INT, EMACS_UINT, EMACS_INT_MAX, PRIuMAX)
+	(pI, _INTPTR) [_MSC_VER]: Fix definitions for MSVC.
+	[_MSC_VER]: Add pragmas to suppress some MSVC warnings.
+
+	* preprep.c (pfnCheckSumMappedFile, rva_to_section)
+	(offset_to_section, relocate_offset, OFFSET_TO_RVA)
+	(RVA_TO_OFFSET, RVA_TO_SECTION_OFFSET, PTR_TO_RVA)
+	(OFFSET_TO_PTR, ROUND_UP, ROUND_DOWN)
+	(copy_executable_and_move_sections, ADJUST_IMPORT_RVA, main): Use
+	DWORD_PTR instead of DWORD for compatibility with x64.
+
+	* nmake.defs: Support AMD64.
+	(EMACS_HEAPSIZE, EMACS_PURESIZE, EMACS_MANIFEST): New macros.
+
+	* gmake.defs: (EMACS_HEAPSIZE, EMACS_PURESIZE, EMACS_MANIFEST):
+	New macros.
+
+	* addsection.c (pfnCheckSumMappedFile, rva_to_section)
+	(offset_to_section, relocate_offset, OFFSET_TO_RVA)
+	(RVA_TO_OFFSET, RVA_TO_SECTION_OFFSET, PTR_TO_RVA)
+	(OFFSET_TO_PTR, ROUND_UP, ROUND_DOWN)
+	(copy_executable_and_add_section, main): Use DWORD_PTR instead of
+	DWORD, for compatibility with x64.
+
+	* emacs-x64.manifest: New file.
+
+	* emacs-x86.manifest: Renamed from emacs.manifest.
+
+2012-09-30  Eli Zaretskii  <eliz@gnu.org>
+
 	* inc/sys/time.h (ITIMER_REAL, ITIMER_PROF): Define.
 	(struct itimerval): Define.
 	(getitimer, setitimer): Add prototypes.
